--- a/.github/workflows/build_cbsinit.yml
+++ b/.github/workflows/build_cbsinit.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 100
       matrix:
         cbsinit_repo: ['https://github.com/ader1990/cloudbase-init-1']
-        cbsinit_branch: ['packet_full_support']
+        cbsinit_branch: ['fix_licensing_kms']
 
     steps:
     - uses: actions/checkout@v1
