--- a/.github/workflows/build_cbsinit.yml
+++ b/.github/workflows/build_cbsinit.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       max-parallel: 100
       matrix:
-        cbsinit_repo: ['https://github.com/crislub/cloudbase-init']
-        cbsinit_branch: ['network-configuration']
+        cbsinit_repo: ['https://github.com/crislub/cloudbase-init-1']
+        cbsinit_branch: ['feature-add-vmware-network']
 
     steps:
     - uses: actions/checkout@v1
