Change branch cloudbase-init repository

--- a/.github/workflows/build_cbsinit.yml
+++ b/.github/workflows/build_cbsinit.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 100
       matrix:
         cbsinit_repo: ['https://github.com/crislub/cloudbase-init-1']
-        cbsinit_branch: ['fix/modify-conf-file']
+        cbsinit_branch: ['feature-remove-mac']
 
     steps:
     - uses: actions/checkout@v1
