--- a/.github/workflows/build_cbsinit.yml
+++ b/.github/workflows/build_cbsinit.yml
@@ -46,6 +46,6 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: 'CloudbaseInitSetup/bin/release/x64/CloudbaseInitSetup.msi'
-        asset_name: "CloudbaseInit_x64_MSI_${{ matrix.cbsinit_name }}"
+        asset_name: "CloudbaseInit_x64_MSI_${{ matrix.cbsinit_name }}.msi"
         asset_content_type: application/msi
 
